--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,5 @@ Config/fusen/version: 0.6.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://github.com/Church-Army/carutools
+BugReports: https://github.com/Church-Army/carutools/issues
