fixing CMDcheck warnings

--- a/dev/config_fusen.yaml
+++ b/dev/config_fusen.yaml
@@ -2,14 +2,15 @@ flat_colours-and-themes.qmd:
   path: dev/flat_colours-and-themes.qmd
   state: active
   R:
-  - R/ca_cols.R
+  - R/ca_col.R
+  - R/ca_colours.R
   - R/ca_pals.R
   - R/theme_ca.R
   tests: []
   vignettes: vignettes/colours-and-themes.Rmd
   inflate:
     flat_file: dev/flat_colours-and-themes.qmd
-    vignette_name: Colours and themes
+    vignette_name: colours and themes
     open_vignette: true
     check: true
     document: true
@@ -25,10 +26,11 @@ flat_helpers.qmd:
   tests:
   - tests/testthat/test-range_labels.R
   - tests/testthat/test-relabeller.R
+  - tests/testthat/test-tally_delimited_string.R
   vignettes: vignettes/helpers.Rmd
   inflate:
     flat_file: dev/flat_helpers.qmd
-    vignette_name: Helpers
+    vignette_name: helpers
     open_vignette: true
     check: true
     document: true
